--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "compile:tailwind": "tailwindcss -i ./src/globals.css -o ./src/styles/tailwind.css --watch",
     "preview": "vite preview"
   },
   "dependencies": {
